# technology

./: CMakeLists.txt  another.txt  file.txt  lab1.docx  main.cpp  newfile_branch.txt  newfile_master.txt  tests.c  ~$lab1.docx
